--- a/fdphd.bib
+++ b/fdphd.bib
@@ -1679,7 +1679,7 @@ lts.fzu.cz/pdf/d-js.pdf
 
 % == Simulations ==
 % -- FDTD and other numerical --/*{{{*/
-@Article{johnson2001mpb,
+@article{johnson2001mpb,
   author =       {Johnson, Steven~G. and Joannopoulos, J.~D.},
   title =        {Block-iterative frequency-domain methods for Maxwell's equations in a planewave basis},
   journal =      {Opt. Express},
@@ -1797,8 +1797,6 @@ lts.fzu.cz/pdf/d-js.pdf
 	howpublished ={Online},
 }
 
-
-
 @article{taflove2005book,
   title={Computational Electrodynamics: The Finite-Difference Time-Domain Method (Artech House, 2005)},
   author={Taflove, A and Hagness, SC},
@@ -1865,6 +1863,14 @@ lts.fzu.cz/pdf/d-js.pdf
 
 
 % Chen 2000 FDMmaster
+@thesis{chen2001filter,
+  title={Filter diagonalization method as a high resolution spectral estimator},
+  author={Chen, Jianhan},
+  year={2000}
+  school={University of California, Irvine}
+}
+
+
 % Chen 2000 FDM PhDThesisProposal
 % KathleenFDM
 % Mandelshtam 2000 FDM
