--- a/theory.tex
+++ b/theory.tex
@@ -1395,7 +1395,7 @@ High concentration of the energy within a small part of the structure reduces th
 The above criteria are somewhat vague, but there exists a well-defined, rigorous criterion dividing the periodic structures clearly into two groups at a given frequency: When a metamaterial is excited above its frequency of resonance, and the resonant energy is well localized, the part of the unit cell volume contains field with the sign opposite to that in the excitation wave. This is similar to the behaviour of the Lorentz oscillator illustrated in Fig. \ref{fg_oscillator_spectrum}. %% TODO check Fig 2.2 
 This opposite-field domain is delimited by a surface where either the electric or magnetic field is constantly zero, which will be denoted as the \textit{nodal plane}. For the individual resonance, the nodal plane is closed and there exists some path through the unit cell which does not cross any nodal plane, while te Bragg band gap leads to open surfaces of the opposite-field domain, transversally interconnected between the cells. A limiting case is the band gap in a plan-parallel dielectric mirror.
 
-The difference between the topology of a closed localized nodal plane, or a delocalized pair of nodal planes can be interpreted as the boundary between MMs and PhCs. However in practice, this well-defined difference causes a $2\pi$-skip of the phase along each unit cell without any obvious impact on the propagation of energy. In more details this is demonstrated in Chapter \ref{chap_results} %TODO point to the diel array
+The difference between the topology of a closed localized nodal plane, or a delocalized pair of nodal planes can be interpreted as the boundary between MMs and PhCs. However in practice, this well-defined difference causes a $2\pi$-skip of the phase along each unit cell without any obvious impact on the propagation of energy. In more details this is demonstrated in Chapter \ref{chapter_results} %TODO point to the diel array
 by numerical studies of the transition cases.
 %Under this criterion, the decision is frequency-dependent. All structures fall into the PhC class in the high-frequency limit.
 
