--- a/intro.tex
+++ b/intro.tex
@@ -116,7 +116,7 @@ The unit system differs across the literature, too. Some of the references, e.g.
  \toprule
 Abbreviation & Meaning	\\
  \hline
-EDB		& (Formulation of Maxwell equations using the $\E$, $\D$ and $\B$ vectors)\\
+EDB			& (Formulation of Maxwell equations using the $\E$, $\D$ and $\B$ vectors)\\
 FDFD 		& Finite-difference frequency-domain (algorithm)\\
 FDM 		& Filter diagonalisation method (algorithm)\\
 FDTD 		& Finite-difference time-domain (algorithm)\\
@@ -124,20 +124,20 @@ FEM 		& Finite-element method (algorithm)\\
 FFT 		& Fast Fourier transform (algorithm)\\
 FRoI 		& Frequency range of interest\\
 GVD 		& Group velocity dispersion \\
-IFC		& Isofrequency contours\\
-LHM		& Left-Handed Material\\ %% TODO used anywhere?
-MM		& Metamaterial\\
+IFC			& Isofrequency contours\\
+LHM			& Left-Handed (Meta)Material\\ 
+MM			& Metamaterial\\
 NGV 		& Negative group velocity\\
-NRW 		& Nicolson-Ross-Weir (method for effective parameter retrieval)\\
-PBG		& Photonic band-gap\\
+NRW 		& Nicolson-Ross-Weir (algorithm)\\
+PBG			& Photonic band-gap\\
 PhC 		& Photonic crystal\\
 PML 		& Perfectly matched layers (absorber in simulation)\\
 PWEM 		& Plane-wave expansion method (algorithm)\\
-RHM 		& Right-Handed Material\\ %% TODO used anywhere?
-SRR		& Split-ring resonator\\
-STO		& Strontium titanate, SrTiO$_3$ (ferroelectric material)\\
+RHM 		& Right-Handed (Meta)Material\\ 
+SRR			& Split-ring resonator\\
+STO			& Strontium titanate, SrTiO$_3$ (ferroelectric material)\\
 TDTS 		& Time-domain terahertz spectroscopy\\
-%TMM			& Transfer-matrix method  (numerical computation)\\
+%TMM		& Transfer-matrix method  (numerical computation)\\
  \bottomrule
  \end{tabular} \end{table}
 
